--- a/src/components/FormButton/style.scss
+++ b/src/components/FormButton/style.scss
@@ -1,4 +1,4 @@
-@import '../theme/assets/styles/variables';
+@import '../../theme/assets/styles/variables';
 
 .form-button {
   // padding: 0 24px;
